--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+<link type="text" rel="stylesheet" href="Index.html"/>
+<title></title>
+</head>
+<body>
+<div id="header">
+	<h1>SUMMARY OF 1103120125</h1>
+	</div>
+	<p>
+        This is the first time I work soo late working on HTML, because everytime I code something, I always do it
+		autotdidactly.<br>And it's not perfect as you think, but it'll do for now.
+	</p>
+	<a href="Index.html">Click here if ye wanna see my CV</a><br>
+	<a href="myForm1.html">Form 1</a><br>
+	<a href="myForm2.html">Form 2</a><br>
+	<a href="myResult.html">See Form Results here</a>
+</body>
+</html>
