--- a/myCV.html
+++ b/myCV.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html>
+ <head>
+<link type="text" rel="stylesheet" href="myCV.html"/>
+<title></title>
+</head>
+<body>
+<div id="header">
+	<h1>Satrio Kamaludin</h1>
+	<p id="name">085323083249</p>
+	<p id="name">satriokamaludin@gmail.com</p>
+	<img src="1103120125.jpg" style="width:170px;height:228px;">
+	</div>
+	<h3>Education</h3>
+            <p>
+            <ul>
+			<li>2000-2006 SDN Cimareme 2</li>
+            <li>2006-2009 SMPN 2 Cimahi</li>
+            <li>2009-2012 SMAN 5 Cimahi</li>
+            <li>2012-Now S1 Teknik Informatika Telkom University</li></ul>
+			</p>
+	<h3>Experience</h3>
+            <p>
+            <ul>
+			<li>Member of English Community and KIR of SMAN 5 Cimahi</li>
+            <li>Participated in Physics Olympiade</li></ul>
+			</p>		
+	<h3>Achievements</h3>
+			<p>
+            <ul>
+			<li>1st Place of English Competition on POLBAN</li></ul>
+			</p>
+	<h3>Skills</h3>
+			<p>
+            <ul>
+			<li>Able to communicate each other</li>
+			<li>A good responsibility</li>
+			<li>A good time management</li>
+			<li>Able to work on group</li></ul>
+			</p>
+	<a href="Index.html">Back to Index</a>
+</body>
+</html>
